# paperclip-userbot

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: paperclip_userbot.session
paperclip_userbot/: api.py  auth.py  bot.py  config.py  main.py
