[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclip_userbot"
version = "0.1.0"
description = "Telegram userbot for Paperclip agent E2E testing"
requires-python = ">=3.11"
dependencies = [
    "pyrogram==2.0.106",
    "tgcrypto==1.2.5",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "aiohttp==3.9.5",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["paperclip_userbot*"]
